[gd_scene load_steps=12 format=3 uid="uid://bdjo6xqmb3w0w"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_2dg7y"]
[ext_resource type="Texture2D" uid="uid://b2xe5e8mrkwm7" path="res://assets/sprites/slime_green.png" id="1_g3kto"]
[ext_resource type="PackedScene" uid="uid://cux1ceu0e0a1u" path="res://scenes/killzone.tscn" id="2_l2xu4"]
[ext_resource type="PackedScene" uid="uid://dug5tjavapy26" path="res://scenes/head.tscn" id="5_6gwvo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bc0ej"]
atlas = ExtResource("1_g3kto")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgvjq"]
atlas = ExtResource("1_g3kto")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_epe1t"]
atlas = ExtResource("1_g3kto")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pskpa"]
atlas = ExtResource("1_g3kto")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_f58yj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc0ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgvjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epe1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pskpa")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7higu"]
size = Vector2(14, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65wfd"]
size = Vector2(12, 11)

[node name="Slime" type="Node2D"]
script = ExtResource("1_2dg7y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f58yj")
animation = &"Idle"
autoplay = "Idle"
frame = 3
frame_progress = 0.0191128

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-9, 0)

[node name="Head" parent="." instance=ExtResource("5_6gwvo")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_7higu")
one_way_collision = true

[node name="killzone" parent="." instance=ExtResource("2_l2xu4")]
position = Vector2(-18, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(18, 3)
shape = SubResource("RectangleShape2D_65wfd")

[connection signal="body_entered" from="Head" to="." method="_on_head_body_entered"]
